--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 regex-lexer = "*"
 byteorder = "*"
+serde_json = "*"
+serde = { version = "*", features = ["derive"] }
